fix contrast errors

--- a/css/style3.css
+++ b/css/style3.css
@@ -72,7 +72,7 @@ nav a:hover {
 h1 {
     font-family: 'Dancing Script', cursive;
     font-size: 100px;
-    color: rgb(254, 4, 233);
+    color: black;
     background-image: url('../images/background/hua.jpg');
     text-align: center;
     margin-top: 0; /* 移除上边距 */
